# crowtax-engine

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
crowtax_engine/: __init__.py  __main__.py  accounts.py  asset_families.py  db.py  elections.py  engine.py  export_hdaf.py  filing_package.py  funding.py  ingest_1099da.py  ingest_csv.py  ingest_dex.py  ingest_executor.py  lp_uniswap_v3.py  models.py  ordinary_income.py  reconcile_1099da.py  report.py  staging.py  tax_estimate.py  transfer_pairs.py  transfers.py
crowtax_engine/migrations/: 001_initial.sql  002_dedup_indexes.sql  003_per_wallet.sql  004_transfers.sql  005_wash_sale.sql  006_ordinary_income.sql  007_funding.sql  008_asset_families.sql  009_nft_class.sql  010_1099da.sql
crowtax_engine/simple/: __init__.py  estimate.py  types.py
jurisdictions/: loader.py
jurisdictions/federal/: 2026.yaml
jurisdictions/states/ak/: 2026.yaml
jurisdictions/states/ca/: 2026.yaml
jurisdictions/states/fl/: 2026.yaml
jurisdictions/states/ga/: 2026.yaml
jurisdictions/states/il/: 2026.yaml
jurisdictions/states/ma/: 2026.yaml
jurisdictions/states/nc/: 2026.yaml
jurisdictions/states/nh/: 2026.yaml
jurisdictions/states/nj/: 2026.yaml
jurisdictions/states/nv/: 2026.yaml
jurisdictions/states/ny/: 2026.yaml
jurisdictions/states/ny/cities/new_york_city/: 2026.yaml
jurisdictions/states/ny/cities/yonkers/: 2026.yaml
jurisdictions/states/pa/: 2026.yaml
jurisdictions/states/sd/: 2026.yaml
jurisdictions/states/tn/: 2026.yaml
jurisdictions/states/tx/: 2026.yaml
jurisdictions/states/wa/: 2026.yaml
jurisdictions/states/wy/: 2026.yaml
jurisdictions/tests/: test_loader.py  test_loader_yaml.py
tests/: builders.py  conftest.py  test_1099da_reconciliation.py  test_asset_families.py  test_elections.py  test_export_hdaf.py  test_fee_placement.py  test_filing_package.py  test_funding.py  test_lp_uniswap_v3.py  test_nft_classification.py  test_ordinary_income.py  test_per_wallet_basis.py  test_promote_confirmed_exclusion.py  test_simple_estimate.py  test_tax_estimate.py  test_transfer_pair_skip.py  test_transfers.py  test_wash_sale_split.py
(+1 files in other folders)
